ops/service.yml
apiVersion: v1
kind: Service
metadata:
  name: stakeit
  namespace: stakeit
spec:
  selector:
    app: stakeit
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
